Eclipse 4.37 (RC2) JDT Patch for Groovy-Eclipse
https://github.com/eclipse-jdt/eclipse.jdt.core/releases/tag/S4_37_0_RC2

for #1631